kubernetes/prometheus-extras/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: istio-ingress
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: pangolin-gateway
      namespace: istio-ingress
  hostnames:
    - prometheus.alexmickelson.guru
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: prometheus-server
          port: 80
          weight: 1
